@@ -6,7 +6,7 @@ parts = test eggs
 recipe = zc.recipe.egg
 eggs =
     plone.recipe.zope2install
-interpreter = python
+interpreter = zope2installpy
 
 [test]
 recipe = zc.recipe.testrunner
