@@ -4,6 +4,11 @@ Change History
 3.1 (unreleased)
 ----------------
 
+- Create download-cache directory when not provided by buildout
+  [gotcha, jfroche]
+
+- Change interpreter name in buildout to avoid name clash with an existing interpreter
+  [gotcha, jfroche]
 
 3.0 (2009-02-26)
 ----------------
